--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
