--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "js-cookie": "^3.0.5",
-    "next": "14.2.3",
+    "next": "rc",
     "next-auth": "^5.0.0-beta.18",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "rc",
+    "react-dom": "rc",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "rc",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
