--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^5.0.0-beta.18",
     "react": "rc",
     "react-dom": "rc",
+    "swiper": "^11.1.4",
     "swr": "^2.2.5"
   },
   "devDependencies": {
