--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
- HOST_AUTH=http://localhost:3501
+HOST_AUTH=https://wrpl.yazidrizkik.dev
+HOST_FORUM=https://wrpl.yazidrizkik.dev
+HOST_MODULE=https://wrpl.yazidrizkik.dev/api/content
+HOST_NEWS=https://wrpl.yazidrizkik.dev/api/content
+HOST_QUIZ=https://wrpl.yazidrizkik.dev/api/content
